--- a/arch/arm/boot/dts/exynos5420-peach-pit.dts
+++ b/arch/arm/boot/dts/exynos5420-peach-pit.dts
@@ -144,6 +144,20 @@
 		samsung,pin-pud = <3>;
 		samsung,pin-drv = <0>;
 	};
+
+	ps8625_sleep: ps8625-sleep {
+		samsung,pins = "gpx3-5";
+		samsung,pin-function = <1>;
+		samsung,pin-pud = <0>;
+		samsung,pin-drv = <0>;
+	};
+
+	ps8625_reset: ps8625-reset {
+		samsung,pins = "gpy7-7";
+		samsung,pin-function = <1>;
+		samsung,pin-pud = <0>;
+		samsung,pin-drv = <0>;
+	};
 };
 
 &pinctrl_3 {
@@ -303,6 +317,24 @@
 			vback-porch = <10>;
 			vfront-porch = <12>;
 			vsync-len = <6>;
+		};
+	};
+};
+
+&hsi2c_7 {
+	status = "okay";
+
+	ps8625-bridge@48 {
+		compatible = "parade,ps8625";
+		reg = <0x48>;
+		sleep-gpio = <&gpx3 5 0>;
+		reset-gpio = <&gpy7 7 0>;
+		lane-count = <2>;
+		pinctrl-names = "default";
+		pinctrl-0 = <&ps8625_sleep &ps8625_reset>;
+
+		display-timings {
+			native-mode = <&timing1>;
 		};
 	};
 };
