TEMP: ARM: dts: Add mclk entry for Snow/Peach-pit boards
On Snow/Peach-pit boards, XCLKOUT provides master clock (mclk) to codec.
Dependent on Tomasz Figa's XCLKOUT patches.

Change-Id: I436804606daf9639041b659bee3fde7b6fd0d923
Signed-off-by: Tushar Behera <tushar.b@samsung.com>

--- a/arch/arm/boot/dts/exynos5250-snow.dts
+++ b/arch/arm/boot/dts/exynos5250-snow.dts
@@ -355,6 +355,8 @@
 			reg = <0x11>;
 			pinctrl-0 = <&max98095_en>;
 			pinctrl-names = "default";
+			clocks = <&pmu_system_controller 0>;
+			clock-names = "mclk";
 		};
 
 		ptn3460-bridge@20 {
