--- a/arch/arm/boot/dts/exynos5250-snow.dts
+++ b/arch/arm/boot/dts/exynos5250-snow.dts
@@ -32,6 +32,13 @@
 			samsung,pin-drv = <0>;
 		};
 
+		ptn3460_gpios: ptn3460-gpios {
+			samsung,pins = "gpy2-5", "gpx1-5";
+			samsung,pin-function = <1>;
+			samsung,pin-pud = <0>;
+			samsung,pin-drv = <0>;
+		};
+
 		sd3_clk: sd3-clk {
 			samsung,pin-drv = <0>;
 		};
@@ -61,6 +68,13 @@
 
 		usb3_vbus_en: usb3-vbus-en {
 			samsung,pins = "gpx2-7";
+			samsung,pin-function = <1>;
+			samsung,pin-pud = <0>;
+			samsung,pin-drv = <0>;
+		};
+
+		dp_backlight_en: dp-backlight-en {
+			samsung,pins = "gpx3-0";
 			samsung,pin-function = <1>;
 			samsung,pin-pud = <0>;
 			samsung,pin-drv = <0>;
@@ -342,6 +356,16 @@
 			pinctrl-0 = <&max98095_en>;
 			pinctrl-names = "default";
 		};
+
+		ptn3460-bridge@20 {
+			compatible = "nxp,ptn3460";
+			reg = <0x20>;
+			powerdown-gpio = <&gpy2 5 0>;
+			reset-gpio = <&gpx1 5 0>;
+			edid-emulation = <5>;
+			pinctrl-names = "default";
+			pinctrl-0 = <&ptn3460_gpios>;
+		};
 	};
 
 	i2s0: i2s@03830000 {
@@ -402,6 +426,31 @@
 		samsung,invert-vclk;
 	};
 
+	panel_lvds: panel-lvds {
+		compatible = "panel-lvds";
+		panel-pre-enable-delay = <100>;
+		panel-post-disable-delay = <100>;
+		panel-enable-delay = <20>;
+		led-en-gpio = <&gpx3 0 1>;
+		pinctrl-0 = <&dp_backlight_en>;
+
+		display-timings {
+			native-mode = <&timing0>;
+
+			timing0: timing@0 {
+				clock-frequency = <70589280>;
+				hactive = <1366>;
+				vactive = <768>;
+				hfront-porch = <40>;
+				hback-porch = <40>;
+				hsync-len = <32>;
+				vback-porch = <10>;
+				vfront-porch = <12>;
+				vsync-len = <6>;
+			};
+		};
+	};
+
 	dp-controller@145B0000 {
 		status = "okay";
 		pinctrl-names = "default";
@@ -413,6 +462,7 @@
 		samsung,link-rate = <0x0a>;
 		samsung,lane-count = <2>;
 		samsung,hpd-gpio = <&gpx0 7 0>;
+		edp-panel = <&panel_lvds>;
 
 		display-timings {
 			native-mode = <&timing1>;
