--- a/arch/arm/boot/dts/exynos5800-peach-pi.dts
+++ b/arch/arm/boot/dts/exynos5800-peach-pi.dts
@@ -78,6 +78,30 @@
 		pinctrl-0 = <&usb301_vbus_en>;
 		enable-active-high;
 	};
+
+	lvds_panel: lvds-panel {
+		compatible = "panel-lvds";
+		panel-enable-delay = <105>;
+		panel-disable-delay = <50>;
+		led-en-gpio = <&gpx2 2 0>;
+		pinctrl-0 = <&dp_backlight_en>;
+
+		display-timings {
+			native-mode = <&timing0>;
+
+			timing0: timing@0 {
+				clock-frequency = <150660000>;
+				hactive = <1920>;
+				vactive = <1080>;
+				hfront-porch = <60>;
+				hback-porch = <172>;
+				hsync-len = <80>;
+				vback-porch = <25>;
+				vfront-porch = <10>;
+				vsync-len = <10>;
+			};
+		};
+	};
 };
 
 &pinctrl_0 {
@@ -106,6 +130,13 @@
 		samsung,pins = "gpx3-7";
 		samsung,pin-function = <0>;
 		samsung,pin-pud = <1>;
+		samsung,pin-drv = <0>;
+	};
+
+	dp_backlight_en: backlight-en {
+		samsung,pins = "gpx2-2";
+		samsung,pin-function = <1>;
+		samsung,pin-pud = <0>;
 		samsung,pin-drv = <0>;
 	};
 };
@@ -184,6 +215,7 @@
 	samsung,link-rate = <0x0a>;
 	samsung,lane-count = <2>;
 	samsung,hpd-gpio = <&gpx2 6 0>;
+	edp-panel = <&lvds_panel>;
 
 	display-timings {
 		native-mode = <&timing1>;
