--- a/arch/arm/boot/dts/exynos5800-peach-pi.dts
+++ b/arch/arm/boot/dts/exynos5800-peach-pi.dts
@@ -57,6 +57,13 @@
 		pinctrl-names = "default";
 	};
 
+	sound {
+		compatible = "google,snow-audio-max98091";
+
+		samsung,i2s-controller = <&i2s0>;
+		samsung,audio-codec = <&max98091>;
+	};
+
 	usb300_vbus_reg: regulator-usb300 {
 		compatible = "regulator-fixed";
 		regulator-name = "P5.0V_USB3CON0";
@@ -156,6 +163,12 @@
 };
 
 &pinctrl_0 {
+	max98091_irq: max98091-irq {
+		samsung,pins = "gpx0-2";
+		samsung,pin-function = <0>;
+		samsung,pin-pud = <0>;
+		samsung,pin-drv = <0>;
+	};
 
 	mask_tpm_reset: mask-tpm-reset {
 		samsung,pins = "gpx0-6";
@@ -385,6 +398,19 @@
 &fimd {
 	status = "okay";
 	samsung,invert-vclk;
+};
+
+&hsi2c_7 {
+	status = "okay";
+
+	max98091: codec@10 {
+		compatible = "maxim,max98091";
+		reg = <0x10>;
+		interrupts = <2 0>;
+		interrupt-parent = <&gpx0>;
+		pinctrl-names = "default";
+		pinctrl-0 = <&max98091_irq>;
+	};
 };
 
 &hsi2c_9 {
@@ -1005,4 +1031,8 @@
 					0x070c0069>;	/* LEFT */
 		};
 	};
+};
+
+&i2s0 {
+	status = "okay";
 };
