--- a/chromeos/config/armel/chromeos-exynos5.flavour.config
+++ b/chromeos/config/armel/chromeos-exynos5.flavour.config
@@ -87,9 +87,8 @@ CONFIG_DRM_KMS_HELPER=y
 # CONFIG_DRM_LOAD_EDID_FIRMWARE is not set
 CONFIG_DRM_PANEL=y
 CONFIG_DRM_PANEL_BINDER=y
-CONFIG_DRM_PANEL_EDP=y
+CONFIG_DRM_PANEL_EDP_LVDS=y
 # CONFIG_DRM_PANEL_LD9040 is not set
-CONFIG_DRM_PANEL_LVDS=y
 # CONFIG_DRM_PANEL_S6E8AA0 is not set
 # CONFIG_DRM_PANEL_SIMPLE is not set
 CONFIG_DRM_PS8622=y
