--- a/arch/arm/boot/dts/exynos5420-peach-pit.dts
+++ b/arch/arm/boot/dts/exynos5420-peach-pit.dts
@@ -280,6 +280,13 @@
 		samsung,pin-drv = <0>;
 	};
 
+	spi_flash_cs: spi-flash-cs {
+		samsung,pins = "gpa2-5";
+		samsung,pin-function = <1>;
+		samsung,pin-pud = <0>;
+		samsung,pin-drv = <3>;
+	};
+
 	ec_spi_cs: ec-spi-cs {
 		samsung,pins = "gpb1-2";
 		samsung,pin-function = <1>;
@@ -824,6 +831,25 @@
 		lane-count = <2>;
 		pinctrl-names = "default";
 		pinctrl-0 = <&ps8625_sleep &ps8625_reset>;
+	};
+};
+
+&spi_1 {
+	status = "okay";
+	samsung,spi-src-clk = <0>;
+	num-cs = <1>;
+	cs-gpios = <&gpa2 5 0>;
+
+	spidev@0 {
+		compatible = "spidev";
+		reg = <0>;
+		spi-max-frequency = <50000000>;
+		pinctrl-names = "default";
+		pinctrl-0 = <&spi_flash_cs>;
+
+		controller-data {
+			samsung,spi-feedback-delay = <2>;
+		};
 	};
 };
 
