--- a/chromeos/config/armel/chromeos-exynos5.flavour.config
+++ b/chromeos/config/armel/chromeos-exynos5.flavour.config
@@ -175,16 +175,16 @@ CONFIG_LOGO_LINUX_VGA16=y
 # CONFIG_MALI_DEBUG_SHADER_SPLIT_FS is not set
 CONFIG_MALI_EXPERT=y
 # CONFIG_MALI_GATOR_SUPPORT is not set
+CONFIG_MALI_MIDGARD=y
+CONFIG_MALI_MIDGARD_DEBUG_SYS=y
+CONFIG_MALI_MIDGARD_DVFS=y
+# CONFIG_MALI_MIDGARD_ENABLE_TRACE is not set
+# CONFIG_MALI_MIDGARD_RT_PM is not set
 # CONFIG_MALI_NO_MALI is not set
 CONFIG_MALI_PLATFORM_FAKE=y
 CONFIG_MALI_PLATFORM_THIRDPARTY=y
 CONFIG_MALI_PLATFORM_THIRDPARTY_NAME="chromebook"
 # CONFIG_MALI_SYSTEM_TRACE is not set
-CONFIG_MALI_T6XX=y
-CONFIG_MALI_T6XX_DEBUG_SYS=y
-# CONFIG_MALI_T6XX_DVFS is not set
-# CONFIG_MALI_T6XX_ENABLE_TRACE is not set
-# CONFIG_MALI_T6XX_RT_PM is not set
 # CONFIG_MALI_TRACE_TIMELINE is not set
 # CONFIG_MAX63XX_WATCHDOG is not set
 CONFIG_MCPM=y
