--- a/chromeos/config/armel/chromiumos-tegra114.flavour.config
+++ b/chromeos/config/armel/chromiumos-tegra114.flavour.config
@@ -99,7 +99,7 @@ CONFIG_KEYBOARD_TEGRA=y
 # CONFIG_LEDS_PWM is not set
 # CONFIG_LIBERTAS_THINFIRM_USB is not set
 # CONFIG_LOGO is not set
-# CONFIG_MALI_T6XX is not set
+# CONFIG_MALI_MIDGARD is not set
 # CONFIG_MCPM is not set
 # CONFIG_MEDIA_CONTROLLER is not set
 CONFIG_MEDIA_SUPPORT=y
