--- a/chromeos/config/i386/common.config
+++ b/chromeos/config/i386/common.config
@@ -531,7 +531,7 @@ CONFIG_LPC_SCH=m
 CONFIG_M686=y
 # CONFIG_MACHZ_WDT is not set
 # CONFIG_MACINTOSH_DRIVERS is not set
-# CONFIG_MALI_T6XX is not set
+# CONFIG_MALI_MIDGARD is not set
 # CONFIG_MATH_EMULATION is not set
 # CONFIG_MATOM is not set
 # CONFIG_MCORE2 is not set
