--- a/chromeos/config/x86_64/common.config
+++ b/chromeos/config/x86_64/common.config
@@ -561,7 +561,7 @@ CONFIG_LPC_ICH=y
 CONFIG_LPC_SCH=y
 # CONFIG_MACHZ_WDT is not set
 # CONFIG_MACINTOSH_DRIVERS is not set
-# CONFIG_MALI_T6XX is not set
+# CONFIG_MALI_MIDGARD is not set
 # CONFIG_MATOM is not set
 # CONFIG_MAXSMP is not set
 # CONFIG_MCORE2 is not set
